fixed text overflow issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,7 @@ body {
   /* width */
   ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
   }
 
   /* Track */
