--- a/client/src/components/messages/message/Message.module.css
+++ b/client/src/components/messages/message/Message.module.css
@@ -15,6 +15,7 @@
 .infoUser {
   color: rgb(255, 0, 106);
   text-transform: capitalize;
+  line-break: anywhere;
 }
 
 .infoUserRoom {
@@ -61,6 +62,7 @@
   /* padding: 10px; */
   width: auto;
   height: auto;
+  line-break: anywhere;
 }
 
 .senderMessageText {
@@ -73,6 +75,7 @@
 
 .receiverMessageBox {
   /* padding: 10px; */
+  line-break: anywhere;
   width: auto;
   height: auto;
 }
@@ -92,6 +95,7 @@
   font-weight: 600;
   display: inline;
   color: rgb(255, 0, 106);
+  line-break: anywhere;
 }
 
 .senderMessageTime {
