--- a/client/src/components/onlineUsers/OnlineUsers.module.css
+++ b/client/src/components/onlineUsers/OnlineUsers.module.css
@@ -1,6 +1,11 @@
 .onlineUsersDiv {
   background-color: #fff3cd;
-  height: 100%;
+  height: 100vh;
+}
+
+.onlineUsersLists {
+  height: 75vh;
+  overflow-y: auto;
 }
 
 .onlineUsersHeader {
