--- a/client/src/components/onlineUsers/onlineUser/OnlineUser.module.css
+++ b/client/src/components/onlineUsers/onlineUser/OnlineUser.module.css
@@ -5,6 +5,7 @@
 .usersOdd {
   text-transform: capitalize;
   padding: 10px;
+  line-break: anywhere;
 }
 
 .usersEven {
